--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint .",
     "dev": "nodemon server.js"
   },
   "keywords": [],
@@ -25,6 +26,8 @@
     "nodemailer": "^7.0.6"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.2",
+    "eslint": "^9.39.2",
     "nodemon": "^3.1.10"
   }
 }
