--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "@eslint/js": "^9.39.2",
     "eslint": "^9.39.2",
     "nodemon": "^3.1.10",
+    "supertest": "^7.2.2",
     "vitest": "^4.0.18"
   }
 }
